--- a/.gitignore
+++ b/.gitignore
@@ -57,4 +57,8 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 # Prisma generated files
 /generated/prisma
-dev.db
+
+# SQLite database files
+*.db
+*.db-shm
+*.db-wal
